k8s/deliveryman-deployment.yaml
# define a pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deliveryman-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deliveryman
  template:
    metadata:
      labels:
        app: deliveryman
    spec:
      containers:
        - image: prporso/image-catalog:2022-10-27-17-33-13 # change to my own from Dockerhub
          name: deliveryman
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP

---

# define connection to pod
apiVersion: v1
kind: Service
metadata:
  name: deliveryman # can be random
spec:
  # ClusterIP for ms that call each other -> available only within cluster
  # LoadBalancer for public IP
  # LoadPort
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: deliveryman # select pod
